[package]
name = "turtys-proudctions-rules-app"
version = "0.1.0"
authors = ["xf8b <unknownperson102424@pm.me>"]
edition = "2018"
description = "Utilities to make moderating Turty's Productions easier"
readme = "README.md"
repository = "https://github.com/xf8b/turtys-productions-rules-app"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
